# meshos-mapgen

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  TROUBLESHOOTING.md  config-optimal-30gb.yaml  pyproject.toml
.github/workflows/: ci.yml
src/meshos_mapgen/: __init__.py  cli.py  config.py  downloader.py  estimate.py  installer.py  merger.py  optimizer.py  presets.py  renderer.py  tiles.py  ui.py
tests/: __init__.py  test_cli.py  test_config.py  test_downloader.py  test_estimate.py  test_installer.py  test_optimizer.py  test_tiles.py
