[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshos-mapgen"
version = "0.1.0"
description = "Generate offline OpenStreetMap raster tiles for MeshOS on LilyGO T-Deck."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "JustACluelessKidAtSchool" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
    "pillow>=10.2.0",
    "pyyaml>=6.0.1",
    "psutil>=5.9.8",
    "docker>=7.0.0",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/JustACluelessKidAtSchool/meshos-mapgen"
Repository = "https://github.com/JustACluelessKidAtSchool/meshos-mapgen"
Issues = "https://github.com/JustACluelessKidAtSchool/meshos-mapgen/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12",
    "types-psutil>=5.9.0",
]

[project.scripts]
meshos-mapgen = "meshos_mapgen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/meshos_mapgen"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
